partner pages revised

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -38,7 +38,7 @@
   imgURL: /assets/images/partners/standard/pubmatic.png
   type: 1
   
-- company: Pubmatic 
+- company: Sortable 
   link: https://www.sortable.com/
   imgURL: /assets/images/partners/standard/sortable.png
   type: 1
