fixing video navbar

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -286,7 +286,7 @@
 
 #--------------Overview--------------|
 - sbSecId: 2
-  title: Intro
+  title: General
   link:
   isLastSubSectionItem: 0
   isHeader: 1
