Making image changes

--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -150,7 +150,7 @@
     sectionId: 2
     sectionName: Download
     title: Prebid Mobile
-    link: /prebid-mobile/prebid-mobile-download.html
+    link: 
     hasBubblePopOut: 1
     bubble:
     -
