revising adops.html

--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -89,7 +89,7 @@
     sectionId: 1
     sectionName: Support
     title: Ad Ops
-    link: /adops.html
+    link: /adops/before-you-start.html
     hasBubblePopOut: 0
     bubble:
 
