--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -120,6 +120,9 @@
     -
       title: Prebid.js
       link: /dev-docs/faq.html
+    -
+      title: Prebid Server
+      link: /faq/prebid-server-faq.html
 
   -
     id: 8
