--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -67,10 +67,10 @@
         link: /formats/display.html
       -
         title: Video
-        link: /prebid-video/video-overview.html
+        link: /formats/video.html
       -
         title: Native
-        link: /dev-docs/show-native-ads.html
+        link: /formats/native.html
       -
         title: AMP
         link: /formats/amp.html
