added mobile download page

--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -153,7 +153,7 @@
     sectionId: 2
     sectionName: Download
     title: Prebid Mobile
-    link: 
+    link: /prebid-mobile/download.html
     hasBubblePopOut: 1
     bubble:
     -
