adding developers to overview section

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -541,6 +541,13 @@
   isHeader: 0
   subgroup: 0
 
+- sbSecId: 2
+  title: Developers
+  link: /developers.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  subgroup: 0
+
 #--------------Ad Ops--------------|
 
 - sbSecId: 3
