--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -19,7 +19,7 @@
   isHeader: 1
   headerId: general
   isSectionHeader: 0
-  sectionTitle: Overview
+  sectionTitle: 
   subgroup: 0
 
 - sbSecId: 0
