--- a/_data/dropdown_v2.yml
+++ b/_data/dropdown_v2.yml
@@ -52,6 +52,15 @@
     isHeader: 0
     isSubSectionStart: 0
     
+  - subsectionId: 0
+    sectionId: 0
+    sectionName: About
+    title: Privacy Policy
+    link:  /privacy.html
+    needsDivider: 0
+    isHeader: 0
+    isSubSectionStart: 0
+
 #----------Product SubNav------------
 
 - sectionId: 1
